log
Wed 20 Mar 2024 07:23:01 PM UTC: 
 exercises.c | 21 ++++++++++++++++++++-
 1 file changed, 20 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:57:13: error: implicit declaration of function ‘destroy_list’ [-Werror=implicit-function-declaration]
   57 |             destroy_list(L); // Liberar la memoria de la lista
      |             ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
b3c2141
Wed 20 Mar 2024 07:23:15 PM UTC: 
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:57:13: error: implicit declaration of function ‘destroy_list’ [-Werror=implicit-function-declaration]
   57 |             destroy_list(L); // Liberar la memoria de la lista
      |             ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f8d69b6
Wed 20 Mar 2024 07:24:18 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
cd7da6a
Wed 20 Mar 2024 07:25:46 PM UTC: 
 exercises.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  1|4
total_score: 10/70
6fc0a62
